feat(allies-slider): currency/tech icon carousel with i18n; replace Allies; add minimal SVG icons

--- a/locales/en.json
+++ b/locales/en.json
@@ -186,7 +186,8 @@
   },
   "allies": {
     "title": "Strategic Allies",
-    "subtitle": "We integrate technologies from global leaders to power our solutions.",
-    "disclaimer": "Brands and logos are shown for reference. InverCenter USA Inc. is not an official partner of these companies; we integrate or use their technologies when required by projects."
+    "subtitle": "We integrate global currencies and technologies to power our fintech solutions.",
+    "disclaimer": "Icons represent currencies and technology for illustration. They do not imply endorsement or affiliation."
   }
 }
+
