--- a/locales/es.json
+++ b/locales/es.json
@@ -209,8 +209,9 @@
     }
   },
   "allies": {
-    "title": "Aliados Estrategicos",
-    "subtitle": "Integramos tecnologias de lideres globales para potenciar nuestras soluciones.",
-    "disclaimer": "Marcas y logotipos mostrados con fines referenciales. InverCenter USA Inc. no es partner oficial de estas empresas; integramos o utilizamos sus tecnologias cuando es requerido por los proyectos."
+    "title": "Aliados estratégicos",
+    "subtitle": "Integramos divisas y tecnologías globales para impulsar nuestras soluciones fintech.",
+    "disclaimer": "Los íconos representan divisas y tecnología con fines ilustrativos. No implican respaldo ni afiliación."
   }
 }
+
