i18n(allies): add English translations for allies2 (title, subtitle, disclaimer)

--- a/locales/en.json
+++ b/locales/en.json
@@ -188,6 +188,11 @@
     "title": "Strategic Allies",
     "subtitle": "We integrate global currencies and technologies to power our fintech solutions.",
     "disclaimer": "Icons represent currencies and technology for illustration. They do not imply endorsement or affiliation."
+  },
+  "allies2": {
+    "title": "Technologies That Power Our Processes",
+    "subtitle": "We implement cutting-edge technology that continually evolves and updates. Our systems and processes leverage global infrastructures and high-performance fintech solutions.",
+    "disclaimer": "Icons represent financial technologies and ecosystems for illustration purposes. They do not imply endorsement, affiliation, or sponsorship by the brands shown."
   }
 }
 
